footer placement on mobile fix

--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -3,6 +3,7 @@
 .Footer {
   position: absolute;
   bottom: 0;
+  left: 0;
   width: 100%;
   text-align: center;
   color: white;
