--- a/src/main.scss
+++ b/src/main.scss
@@ -56,7 +56,8 @@ html {
 
 .App {
   text-align: center;
-
+  position: relative;
+  min-height: 100vh;
   h1 {
     margin: 1rem;
     font-size: 2.4rem;
